Update hero section with modern design

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "swiper": "^11.0.7",
     "react-countup": "^6.5.0",
     "i18next": "^23.10.1",
-    "react-i18next": "^14.0.5"
+    "react-i18next": "^14.0.5",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
