--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "react-intersection-observer": "^9.8.0",
-    "framer-motion": "^11.0.8",
-    "swiper": "^11.0.7",
     "react-countup": "^6.5.0",
-    "i18next": "^23.10.1",
-    "react-i18next": "^14.0.5"
+    "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.8.0",
+    "react-router-dom": "^6.22.3",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -35,6 +33,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^6.3.5"
   }
 }
